--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@ body {
     background-color: rgb(0, 0, 0, 0.06);
 }
 
+.bg-success, .bg-danger {
+    color: white;
+}
+
 .question-footer {
     display: flex;
     justify-content: space-between;
