--- a/styles/quiz_navigation.css
+++ b/styles/quiz_navigation.css
@@ -8,36 +8,27 @@
 .quiz-themes {
     display: flex;
     flex-direction: column;
-    padding-left: 16px;
 }
 
 .theme {
-    flex: 1;
+    width: 72px;
+    height: 72px;
+    background-color: yellow;
+    border: 1px solid black;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: end;    
+    transform: rotate(-90deg);
+    box-sizing: border-box;
+    cursor: pointer;
 }
 
-.theme span {
-    margin-right: 8px;
-}
-
-.selection-container {
-    width: 8px;
-    height: 100%;
-    background-color: red;
-    border: none;
-    padding: 0;
-    display: flex;
-    flex-direction: row-reverse;
-}
-
-.theme-select {
-    width: 100%;
-    height: 100%;
-    transition: width 0.5s ease;
-}
-
-.width-100 {
-    width: 100%;
+.quiz-select-box {
+    position: absolute;
+    width: 72px;
+    height: 72px;
+    background-color: rgb(255, 0, 0, 0.5);
+    border: 1px solid black;
+    box-sizing: border-box;
+    z-index: 1;
 }
