--- a/styles/quiz_navigation.css
+++ b/styles/quiz_navigation.css
@@ -17,18 +17,20 @@
     border: 1px solid black;
     display: flex;
     justify-content: center;
-    align-items: end;    
+    align-items: end;
     transform: rotate(-90deg);
     box-sizing: border-box;
     cursor: pointer;
 }
 
 .quiz-select-box {
-    position: absolute;
+    position: relative;
     width: 72px;
     height: 72px;
+    top: 0px;
     background-color: rgb(255, 0, 0, 0.5);
     border: 1px solid black;
     box-sizing: border-box;
     z-index: 1;
+    transition: top 0.2s ease-in;
 }
