--- a/styles/quiz_navigation.css
+++ b/styles/quiz_navigation.css
@@ -21,6 +21,7 @@
     cursor: pointer;
     font-weight: 600;
     color: white;
+    user-select: none;
 }
 
 .quiz-select-box {
@@ -43,4 +44,5 @@
     justify-content: center;
     align-items: end;
     font-weight: 600;
+    user-select: none;
 }
