--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgba(var(--bs-secondary-bg-rgb), 1);
+    background-color: rgba(var(--bs-tertiary-color-rgb), 0.15);
 }
 
 p {
